# Chaoswing

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  Makefile  README.md  build.sh  manage.py  pyproject.toml  pyrightconfig.json  render.yaml  test
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: api_views.py  apps.py  mock_graph.py  models.py  partial_views.py  urls.py  views.py
apps/web/management/commands/: backfill_agent_pipeline_traces.py  build_benchmark_dataset.py  build_leadlag_pairs.py  collect_live_ticks.py  collect_market_snapshots.py  export_benchmark_report.py  label_resolved_markets.py  review_graph_run.py  run_agent_eval.py  run_agent_trust_benchmark.py  run_golden_dataset_eval.py  run_graph_agent.py  run_leadlag_backtest.py  run_live_snapshot_collector.py  run_paper_trader.py  run_quality_backtest.py  run_related_market_ranking_benchmark.py  run_related_market_usefulness_benchmark.py  run_resolution_backtest.py  stream_live_ticks.py  sync_crossvenue_market_map.py  verify_chaoswing.py
apps/web/migrations/: 0001_initial.py  0002_graphrun_event_slug_graphrun_graph_stats_and_more.py  0003_watchlist.py  0004_experimentrun_agenttrace_marketsnapshot_and_more.py  0005_seed_default_watchlists.py  0006_crossvenuemarketmap_leadlagpair_marketeventtick_and_more.py  0007_relatedmarketjudgment.py  0008_agenttrace_required_stage_unique.py  0009_relatedmarketjudgment_multi_reviewer.py  0010_refresh_default_watchlist_copy.py
apps/web/services/: __init__.py  agent_pipeline.py  agent_trace_backfill.py  anthropic_agent.py  api_reference.py  contracts.py  graph_builder.py  graph_workflow.py  icons.py  leadlag.py  leadlag_streaming.py  link_verifier.py  market_intelligence.py  ml_hooks.py  mlops.py  polymarket.py  resolution_labeling.py  snapshot_ingestion.py
apps/web/static/web/css/: base.css  components.css  dashboard.css  intelligence.css  landing.css  layout.css  motion.css  overlays.css  panels.css  tokens.css
apps/web/static/web/js/: animations.js  api.js  controls.js  graph-effects.js  graph-toolbar.js  graph.js  inspector.js  main.js  state.js  (+2 more)
apps/web/templates/web/: api_docs.html  base.html  benchmarks.html  dashboard.html  landing.html  leadlag_monitor.html  market_brief.html  marketing_base.html  related_market_review.html  watchlists.html
chaoswing/: asgi.py  config.py  middleware.py  settings.py  urls.py  wsgi.py
docs/: api-contracts.md  architecture.md  benchmark-methodology.md  case-studies.md  design-principles.md  frontend-architecture.md  resume-bullets.md
notebooks/: README.md  benchmark_registry_overview.ipynb  lead_lag_signal_validation.ipynb  related_market_ranking_analysis.ipynb  resolution_forecasting_baselines.ipynb
tests/: test_agent_eval.py  test_agent_trust.py  test_api_docs.py  test_config.py  test_forecasting.py  test_leadlag.py  test_leadlag_streaming.py  test_mlops.py  test_related_market_ranking.py  test_related_market_review.py  test_snapshot_ingestion.py  test_web.py
(+5 files in other folders)
