[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoswing"
version = "0.1.0"
description = "Interface-first butterfly graph explorer for Polymarket events."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "ChaosWing contributors" }]
dependencies = ["anthropic>=0.52,<1.0", "Django>=5.1,<6.0"]

[project.optional-dependencies]
dev = ["ruff>=0.11,<1.0", "django-stubs>=5.1,<5.2", "pyright>=1.1,<2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chaoswing*", "apps*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
