[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoswing"
version = "0.1.0"
description = "Turn any Polymarket event into a live butterfly graph of causal links, related markets, evidence, and narrative spillover."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "ChaosWing contributors" }]
dependencies = [
    "anthropic>=0.52,<1.0",
    "Django>=5.1,<6.0",
    "gunicorn>=23.0",
    "whitenoise[brotli]>=6.8",
    "dj-database-url>=2.3",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://chaoswing.onrender.com"
Repository = "https://github.com/Zwc-11/Chaoswing"

[project.optional-dependencies]
dev = ["ruff>=0.11,<1.0", "django-stubs>=5.1,<5.2", "pyright>=1.1,<2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chaoswing*", "apps*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
